--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,7 +75,7 @@ jobs:
           git config --global user.email "actions@github.com"
           git add CHANGELOG.md
           git commit -m "Update changelog for version $CURRENT_TAG"
-          git push
+          git push origin HEAD:main
 
       - name: Update Release with Changelog
         uses: ncipollo/release-action@v1
