--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: anymex
 description: "AnymeX - One Stop for anime, manga, novels"
-publish_to: 'none'
+publish_to: "none"
 version: 2.8.4
 
 environment:
-  sdk: '>=3.4.4 <4.0.0'
+  sdk: ">=3.4.4 <4.0.0"
 
 dependencies:
   carousel_slider: ^4.2.1
@@ -51,7 +51,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
-  assets: 
+  assets:
     - assets/images/logo_transparent.png
     - .env
 
@@ -63,7 +63,7 @@ flutter:
     - family: Poppins-SemiBold
       fonts:
         - asset: assets/fonts/Poppins/Poppins-SemiBold.ttf
-        
+
     - family: Poppins-Bold
       fonts:
         - asset: assets/fonts/Poppins/Poppins-Bold.ttf
