--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,56 +20,51 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           #!/bin/bash
+
+          # Determine Previous and Current Tags
           PREVIOUS_TAG=$(git tag --sort=-v:refname | grep -vE '(-alpha|-beta|-rc)' | head -n 2 | tail -n 1)
           CURRENT_TAG=${GITHUB_REF#refs/tags/}
 
+          # Default to the initial commit if no previous tag exists
           if [ -z "$PREVIOUS_TAG" ]; then
             PREVIOUS_TAG=$(git rev-list --max-parents=0 HEAD)
           fi
 
-          # Initialize changelog with the current tag as the version
+          echo "Previous Tag: $PREVIOUS_TAG"
+          echo "Current Tag: $CURRENT_TAG"
+
+          # Check if there are any commits between the tags
+          if [ -z "$(git log $PREVIOUS_TAG..$CURRENT_TAG --oneline)" ]; then
+            echo "No commits found between $PREVIOUS_TAG and $CURRENT_TAG."
+            exit 0
+          fi
+
+          # Initialize Changelog
           echo "# Changelog" > CHANGELOG.md
           echo "## $CURRENT_TAG" >> CHANGELOG.md
           echo "" >> CHANGELOG.md
 
-          # 🎉 New Features: (commits with 'feat')
-          echo "## 🎉 New Features:" >> CHANGELOG.md
-          git log $PREVIOUS_TAG..$CURRENT_TAG --grep='^feat' --pretty=format:'* [`%h`](https://github.com/RyanYuuki/AnymeX/commit/%h): %s' >> CHANGELOG.md
+          # Define Commit Types
+          declare -A SECTIONS=(
+            ["🎉 New Features"]="^feat"
+            ["🛠️ Bug Fixes & Improvements"]="^(fix|bug|improvement|patch)"
+            ["🔧 Refactors"]="^refactor"
+            ["🎨 Style Changes"]="^style"
+            ["🚀 Performance Improvements"]="^perf"
+            ["🧹 Chores & Documentation"]="^(chore|docs|build|ci)"
+          )
 
-          echo "" >> CHANGELOG.md
-
-          # 🛠️ Bug Fixes & Improvements: (commits with 'fix', 'bug', 'improvement', etc.)
-          echo "## 🛠️ Bug Fixes & Improvements:" >> CHANGELOG.md
-          git log $PREVIOUS_TAG..$CURRENT_TAG --grep='^(fix|bug|improvement|patch)' --pretty=format:'* [`%h`](https://github.com/RyanYuuki/AnymeX/commit/%h): %s' >> CHANGELOG.md
-
-          echo "" >> CHANGELOG.md
-
-          # 🔧 Refactors: (commits with 'refactor')
-          echo "## 🔧 Refactors:" >> CHANGELOG.md
-          git log $PREVIOUS_TAG..$CURRENT_TAG --grep='^refactor' --pretty=format:'* [`%h`](https://github.com/RyanYuuki/AnymeX/commit/%h): %s' >> CHANGELOG.md
-
-          echo "" >> CHANGELOG.md
-
-          # 🎨 Style Changes: (commits with 'style')
-          echo "## 🎨 Style Changes:" >> CHANGELOG.md
-          git log $PREVIOUS_TAG..$CURRENT_TAG --grep='^style' --pretty=format:'* [`%h`](https://github.com/RyanYuuki/AnymeX/commit/%h): %s' >> CHANGELOG.md
-
-          echo "" >> CHANGELOG.md
-
-          # 🚀 Performance Improvements: (commits with 'perf')
-          echo "## 🚀 Performance Improvements:" >> CHANGELOG.md
-          git log $PREVIOUS_TAG..$CURRENT_TAG --grep='^perf' --pretty=format:'* [`%h`](https://github.com/RyanYuuki/AnymeX/commit/%h): %s' >> CHANGELOG.md
-
-          echo "" >> CHANGELOG.md
-
-          # 🧹 Chores & Documentation: (commits with 'chore', 'docs')
-          echo "## 🧹 Chores & Documentation:" >> CHANGELOG.md
-          git log $PREVIOUS_TAG..$CURRENT_TAG --grep='^(chore|docs|build|ci)' --pretty=format:'* [`%h`](https://github.com/RyanYuuki/AnymeX/commit/%h): %s' >> CHANGELOG.md
+          # Generate Sections
+          for SECTION in "${!SECTIONS[@]}"; do
+            echo "## $SECTION:" >> CHANGELOG.md
+            git log $PREVIOUS_TAG..$CURRENT_TAG --grep="${SECTIONS[$SECTION]}" --pretty=format:'* [`%h`](https://github.com/RyanYuuki/AnymeX/commit/%h): %s' >> CHANGELOG.md
+            echo "" >> CHANGELOG.md
+          done
 
           # Output the generated changelog
           cat CHANGELOG.md
 
-      - name: Commit and push changelog
+      - name: Commit and Push Changelog
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
