Fix: Changelog Part-1

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,57 +20,64 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           #!/bin/bash
-
+ 
           # Determine Previous and Current Tags
           PREVIOUS_TAG=$(git tag --sort=-v:refname | grep -vE '(-alpha|-beta|-rc)' | head -n 2 | tail -n 1)
           CURRENT_TAG=${GITHUB_REF#refs/tags/}
-
+ 
           # Default to the initial commit if no previous tag exists
           if [ -z "$PREVIOUS_TAG" ]; then
             PREVIOUS_TAG=$(git rev-list --max-parents=0 HEAD)
           fi
-
+ 
           echo "Previous Tag: $PREVIOUS_TAG"
           echo "Current Tag: $CURRENT_TAG"
 
-          # Check if there are any commits between the tags
-          if [ -z "$(git log $PREVIOUS_TAG..$CURRENT_TAG --oneline)" ]; then
-            echo "No commits found between $PREVIOUS_TAG and $CURRENT_TAG."
-            exit 0
-          fi
+          # Check for commits between the tags
+          COMMITS=$(git log $PREVIOUS_TAG..$CURRENT_TAG --oneline)
+          echo "Commits found between $PREVIOUS_TAG and $CURRENT_TAG:"
+          echo "$COMMITS"
 
           # Initialize Changelog
           echo "# Changelog" > CHANGELOG.md
           echo "## $CURRENT_TAG" >> CHANGELOG.md
           echo "" >> CHANGELOG.md
-
-          # Define Commit Types
+ 
+          # Define Commit Types and Regular Expressions
           declare -A SECTIONS=(
-            ["🎉 New Features"]="^feat"
-            ["🛠️ Bug Fixes & Improvements"]="^(fix|bug|improvement|patch)"
-            ["🔧 Refactors"]="^refactor"
-            ["🎨 Style Changes"]="^style"
-            ["🚀 Performance Improvements"]="^perf"
-            ["🧹 Chores & Documentation"]="^(chore|docs|build|ci)"
+              ["🎉 New Features"]="^feat"
+              ["🛠️ Bug Fixes & Improvements"]="^(fix|bug|improvement|patch)"  # Not working need to check
+              ["🔧 Refactors"]="^refactor"
+              ["🎨 Style Changes"]="^style"
+              ["🚀 Performance Improvements"]="^perf"
+              ["🧹 Chores & Documentation"]="^(chore|docs|build|ci)"  # Not working need to check
           )
-
+ 
           # Generate Sections
           for SECTION in "${!SECTIONS[@]}"; do
-            echo "## $SECTION:" >> CHANGELOG.md
-            git log $PREVIOUS_TAG..$CURRENT_TAG --grep="${SECTIONS[$SECTION]}" --pretty=format:'* [`%h`](https://github.com/RyanYuuki/AnymeX/commit/%h): %s' >> CHANGELOG.md
-            echo "" >> CHANGELOG.md
-          done
+            REGEX="${SECTIONS[$SECTION]}"
+            COMMITS=$(git log $PREVIOUS_TAG..$CURRENT_TAG --first-parent --grep="$REGEX" --pretty=format:'* [`%h`](https://github.com/RyanYuuki/AnymeX/commit/%h): %s')
 
+            echo "Commits for section '$SECTION' matching regex '$REGEX':"
+            echo "$COMMITS"
+            
+            if [[ ! -z "$COMMITS" ]]; then
+              echo "## $SECTION:" >> CHANGELOG.md
+              echo "$COMMITS" >> CHANGELOG.md
+              echo "" >> CHANGELOG.md
+            fi
+          done
+ 
+          # Output the generated changelog for debugging
           cat CHANGELOG.md
 
-
-      - name: Commit and push changelog
+      - name: Commit and Push Changelog
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git add CHANGELOG.md
-          git commit -m "Update changelog for version $CURRENT_TAG"
-          git push origin HEAD:main
+          git commit -m "Update changelog for version $CURRENT_TAG" || echo "No changes to commit."
+          git push origin HEAD:main || echo "Push failed."
 
       - name: Update Release with Changelog
         uses: ncipollo/release-action@v1
@@ -78,7 +85,7 @@ jobs:
           bodyFile: "CHANGELOG.md"
           token: ${{ secrets.GITHUB_TOKEN }}
           allowUpdates: true
-
+          
   build-android:
     runs-on: ubuntu-latest
     needs: generate-changelog
