--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -177,8 +177,8 @@ jobs:
 
       - name: Zip Linux Artifacts
         run: |
-          cd build/linux/x64/release/bundle
-          zip -r ../../../../../AnymeX-Linux.zip .
+          cd build/linux/x64/release
+          zip -r ../../../../AnymeX-Linux.zip .
 
       - name: Release Linux Build
         uses: ncipollo/release-action@v1
