--- a/.github/ISSUE_TEMPLATE/report_issue.yml
+++ b/.github/ISSUE_TEMPLATE/report_issue.yml
@@ -93,7 +93,7 @@ body:
           required: true
         - label: I have provided a clear and descriptive title.
           required: true
-        - label: I am using the **[latest](https://github.com/RyanYuuki/AnymeX/releases/latest)** version of Dartotsu. If not, I have provided a reason for not updating.
+        - label: I am using the **[latest](https://github.com/RyanYuuki/AnymeX/releases/latest)** version of AnymeX. If not, I have provided a reason for not updating.
           required: true
         - label: I have updated all relevant extensions or dependencies.
           required: true
