--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -9,7 +9,8 @@ on:
   workflow_dispatch: # Allow manual triggering of this workflow
 
 jobs:
-   generate-changelog:
+  notify:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
