--- a/.github/workflows/Notify.yml
+++ b/.github/workflows/Notify.yml
@@ -3,13 +3,14 @@ name: Notify Release
 on:
   workflow_run:
     workflows:
-      - "Build and Release AnymeX" # Name of the triggering workflow
+      - "changelog" # Name of the triggering workflow
     types:
       - completed
   workflow_dispatch: # Allow manual triggering of this workflow
-  
+
 jobs:
   notify:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
